--- a/AAA-ss/src/Home/home.css
+++ b/AAA-ss/src/Home/home.css
@@ -2,6 +2,7 @@
   background-color: rgb(255, 255, 255);
     text-align: center;
     padding: 50px;
+    background-image: url('HomeAAA.png');
   }
   
   .home-heading {
