--- a/AAA-ss/src/Home/home.css
+++ b/AAA-ss/src/Home/home.css
@@ -11,7 +11,13 @@
     margin-bottom: 20px;
   }
   
-  
+  .home-image {
+    width: 1000px;
+    height: 5000px;
+    margin-bottom: 20px; /* Space between the image and the button */
+    object-fit: cover;
+    border-radius: 20px;
+  }
   
   .home-button {
     background-color: #055ab5;
