--- a/AAA-ss/src/Home/home.css
+++ b/AAA-ss/src/Home/home.css
@@ -10,7 +10,7 @@
 
 .home-heading {
   font-size: 3rem;
-  color: #ffeb3b; /* Bright color for better visibility on background */
+  color: #00bbff; /* Bright color for better visibility on background */
   margin-bottom: 20px;
 }
 
