--- a/AAA-ss/src/User/user.css
+++ b/AAA-ss/src/User/user.css
@@ -7,8 +7,9 @@
   
   /* Blue-colored h1 heading */
   .blue-heading {
-    color: rgb(5, 5, 146);
+    color: rgb(0, 106, 255);
     font-size: 2.5em;
+    font-weight: bold;
   }
   
   /* Paragraph styling */
@@ -18,7 +19,7 @@
     margin: 20px auto;
     max-width: 1400px;
     text-align: justify;
-    color: #000000;
+    color: #ffffff;
     font-style: oblique;
     font-weight: 600;
   
